--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-helmet": "^5.2.0",
     "react-share": "^2.4.0",
     "react-twitter-widgets": "^1.7.1",
+    "rebass": "^3.0.1",
+    "styled-components": "^4.1.3",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
