💄⬆️ Add font-awesome packages and library configuration; Update user links to properly use icons

--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "2.0.91",
     "gatsby-image": "2.0.26",
     "gatsby-plugin-catch-links": "2.0.9",
     "gatsby-plugin-feed": "2.0.11",
     "gatsby-plugin-google-analytics": "2.0.9",
+    "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-lodash": "3.0.3",
     "gatsby-plugin-manifest": "2.0.13",
     "gatsby-plugin-nprogress": "2.0.7",
