--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "2.0.91",
     "gatsby-image": "2.0.26",
     "gatsby-plugin-catch-links": "2.0.9",
@@ -22,6 +23,7 @@
     "gatsby-plugin-s3": "^0.2.4",
     "gatsby-plugin-sharp": "2.0.17",
     "gatsby-plugin-sitemap": "2.0.4",
+    "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "2.0.8",
     "gatsby-remark-autolink-headers": "2.0.12",
     "gatsby-remark-copy-linked-files": "2.0.8",
@@ -41,7 +43,7 @@
     "react-share": "^2.4.0",
     "react-twitter-widgets": "^1.7.1",
     "rebass": "^3.0.1",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.4.1",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
